--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "batching-queue",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Batching queue",
   "keywords": [
     "queue",
@@ -20,6 +20,11 @@
     "test": "tests"
   },
   "scripts": {
+    "publish": "git push origin --tags",
+    "release:pre": "npm version prerelease && npm publish --tag pre",
+    "release:patch": "npm version patch && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:major": "npm version major && npm publish",
     "lint": "semistandard src/**/*.js tests/**/*.js --fix",
     "mocha": "mocha ./tests",
     "coverage": "nyc npm run mocha",
@@ -28,6 +33,7 @@
   "devDependencies": {
     "mocha": "^7.2.0",
     "nyc": "^15.1.0",
+    "redis": "^3.0.2",
     "semistandard": "^14.2.0"
   },
   "semistandard": {
@@ -45,5 +51,8 @@
       "lcov",
       "text"
     ]
+  },
+  "dependencies": {
+    "nanoid": "^3.1.9"
   }
 }
