--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">= 8",
     "npm": ">= 3"
   },
-  "main": "index.js",
+  "main": "./src/",
   "directories": {
     "test": "tests"
   },
