--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "coverage": "nyc npm run mocha",
     "test": "npm run lint && npm run coverage"
   },
+  "dependencies": {
+    "nanoid": "^3.1.23"
+  },
   "devDependencies": {
-    "mocha": "^8.2.1",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "redis": "^3.1.2",
-    "semistandard": "^16.0.0"
+    "semistandard": "*"
   },
   "semistandard": {
     "env": [
@@ -51,8 +54,5 @@
       "lcov",
       "text"
     ]
-  },
-  "dependencies": {
-    "nanoid": "^3.1.22"
   }
 }
