--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   },
   "devDependencies": {
     "ioredis": "^4.28.3",
-    "mocha": "^9.1.4",
-    "nyc": "^15.1.0",
-    "redis": "^3.1.2",
-    "semistandard": "*"
+    "mocha": "latest",
+    "nyc": "latest",
+    "redis": "^4.5.0",
+    "semistandard": "latest"
   },
   "semistandard": {
     "env": [
