--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "latest",
     "@redis/client": "^1.5.14",
     "standard": "latest",
+    "standard-version": "latest"
   },
   "standard": {
     "env": [
